# ytranscript

./: .gitignore  README.md
.github/workflows/: release.yml
app/: package-lock.json  package.json
app/src/: App.css  App.tsx  api.ts  history.ts  index.css  types.ts  updater.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src/components/: ExportBar.tsx  Feedback.tsx  Header.tsx  HistoryPanel.tsx  InputPanel.tsx  TranscriptView.tsx  UpdateBanner.tsx
backend/: formats.py  transcript_service.py
