[package]
name = "app"
version = "0.1.3"
description = "Desktop app for fetching and exporting YouTube transcripts"
authors = ["Sunny Sanitize <sunnyzhang565656@gmail.com>"]
license = ""
repository = "https://github.com/sunnysanitize/ytranscript"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2.3.2"
url = "2.5"
yt-transcript-rs = "0.1.8"
